--- a/demo/templates/manage_users.html
+++ b/demo/templates/manage_users.html
@@ -15,6 +15,7 @@
             right: 20px;
             background-color: #c8e6c9;
             color: green;
+            font-size: 18px;
             padding: 15px;
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
