--- a/demo/templates/app.html
+++ b/demo/templates/app.html
@@ -52,7 +52,6 @@
     color:#666666;
     padding-right:5px;
   
-
 }
 .Hotel:hover a{
     color:red;
@@ -533,12 +532,12 @@ h5{
   }
   
   .arrow-button .left-arrow::before {
-    content: "\2190"; /* Unicode character for left arrow */
+    content: "\2190"; 
     margin-right: 5px;
   }
   
   .arrow-button .right-arrow::after {
-    content: "\2192"; /* Unicode character for right arrow */
+    content: "\2192"; 
     margin-left: 5px;
   }
   .scroll-container {
@@ -549,9 +548,9 @@ h5{
   
   .scroll-container img {
     display: inline-block;
-    width: 200px; /* Adjust image width as needed */
+    width: 200px; 
     height: 35px;
-    margin-right: 10px; /* Adjust spacing between images */
+    margin-right: 10px;
   }
   
   .scroll-button {
