--- a/demo/static/app.css
+++ b/demo/static/app.css
@@ -209,25 +209,26 @@
     margin-left: 61px;
   }
 .ridge{
-    border: 2px solid rgb(220, 205, 205);
-    width: 116px;
-    height: 34px;
-    margin-left: 0px;
-    border-radius: 5px;
-    padding: 5px;
-    font-size: 10px;
-}
+    
+        border: 2px solid rgb(232, 223, 223) !important; 
+        width: 116px;
+        height: 34px;
+        margin-left: 0px;
+        border-radius: 5px;
+        padding: 5px;
+        font-size: 10px;
+    }
 
 .ridge:hover{
     color: red;
-    border-color:red;
+    border: 2px solid red !important; 
 }
 .ridge:active{
     color: red;
     border-color:red;
 }
 .bride{
-    border: 2px solid rgb(220, 205, 205);
+    border: 2px solid rgb(232, 223, 223) !important; 
     width: 116px;
     height: 34px;
     margin-left: 0px;
@@ -237,10 +238,10 @@
   }
 .bride:hover{
     color: red;
-    border-color: red;
+    border: 2px solid red !important; 
 }
 .ride{
-    border: 2px solid rgb(220, 205, 205);
+    border: 2px solid rgb(232, 223, 223) !important; 
     width: 116px;
     height: 34px;
     margin-left: 0px;
@@ -250,7 +251,7 @@
 }
 .ride:hover{
     color: red;
-    border-color: red;
+    border: 2px solid red !important; 
 }
 .side{
     text-align: right;
@@ -260,7 +261,8 @@
 
 }
 .low{
-    font-size: 0.75rem !important;
+    font-size:18px !important;
+    font-weight: bold;
 }
 .blue{
     background: #228ee9;
